test/spec_vectors/memory_init64/fail/module_9.wat
(module (func (export "test") (memory.init 1 (i64.const 1234) (i32.const 1) (i32.const 1))))